--- a/templates/mixins/elearning/learning-content.jade
+++ b/templates/mixins/elearning/learning-content.jade
@@ -1,16 +1,17 @@
 //- Card Template
 mixin learning-object-card(learningObject, redirect)
-  .card
+  .card    
     if learningObject.thumbnail.exists
       //- img.card-img-top(src=learningObject._.thumbnail.limit(250,200), alt=learningObject.title, height="200px", width="250px")
       +img-available-card-top(learningObject._.thumbnail.limit(250,200), learningObject.title, 250, 200)
     else
-      //- img.card-img-top(src="http://placehold.it/250x200?text=No+Available+Image", alt="No Available Image" , height="150px", width="200px")
-      +img-na-card-top(250, 200)
+      if learningObject.video
+        +img-youtube(learningObject.video.videoId, "No Available Image", 150, 200)  
+      else
+        //- img.card-img-top(src="http://placehold.it/250x200?text=No+Available+Image", alt="No Available Image" , height="150px", width="200px")
+        +img-na-card-top(250, 200)
     .card-block
       .card-title.truncate-text.text-primary(data-toggle="tooltip" data-placement="bottom" title=learningObject.title) !{learningObject.title}
-      //- .meta
-        +learning-object-reactions(learningObject)
       .card-text
         p.block-with-text(data-toggle="tooltip" data-placement="bottom" title=learningObject.content.brief) !{learningObject.content.brief}
     .card-footer
@@ -35,17 +36,17 @@ mixin course-card(course, redirect)
 mixin learning-object-tr-media(learningObject, redirect)
   tr.media
     td
-      .media-left
-        if learningObject.thumbnail.exists
+      a(href=redirect)
+        .media-left
           a(href=redirect)
-            //- img(src=learningObject._.thumbnail.limit(200,150), alt=learningObject.title, height='150px', width='200px').img-rounded.media-object
-            +img-available-rounded-media-object(learningObject._.thumbnail.limit(180,150), learningObject.title, 180, 150)
-        else
-          a(href=redirect)
-            +img-na-rounded-media-object(180, 150)
-            //- img(src="http://placehold.it/200x150?text=No+Available+Image", height='150px', width='200px').img-rounded.media-object
-      .media-body
-        a(href=learningObject.url)
+          if learningObject.thumbnail.exists
+            +img-available-rounded-media-object(learningObject._.thumbnail.limit(200,150), learningObject.title, 200, 150)
+          else
+            if learningObject.video
+              +img-youtube(learningObject.video.videoId, "No Available Image", 200, 150)  
+            else
+              +img-na-rounded-media-object(200, 150)
+        .media-body
           h3.media-heading.truncate-text.text-primary(data-toggle="tooltip" data-placement="bottom" title=learningObject.title) !{learningObject.title}
           p.block-with-text(data-toggle="tooltip" data-placement="bottom" title=learningObject.content.brief) !{learningObject.content.brief}
           hr
@@ -61,10 +62,10 @@ mixin course-tr-media(course, redirect)
         if course.thumbnail.exists
           a(href=redirect)
             //- img(src=course._.thumbnail.limit(200,150), alt=course.title, height='150px', width='200px').img-rounded.media-object
-            +img-available-rounded-media-object(course._.thumbnail.limit(180,150), course.title, 180, 150)
+            +img-available-rounded-media-object(course._.thumbnail.limit(200,150), course.title, 200, 150)
         else
           a(href=redirect)
-            +img-na-rounded-media-object(180, 150)
+            +img-na-rounded-media-object(200, 150)
             
       .media-body
         a(href=course.url)
@@ -78,10 +79,10 @@ mixin learning-content-tr-media(learningContent, redirect)
         if learningContent.thumbnail.exists
           a(href=redirect)
             //- img(src=learningContent._.thumbnail.limit(200,150), alt=learningContent.title, height='150px', width='200px').img-rounded.media-object
-            +img-available-rounded-media-object(learningContent._.thumbnail.limit(180,150), learningContent.title, 180, 150)
+            +img-available-rounded-media-object(learningContent._.thumbnail.limit(200,150), learningContent.title, 200, 150)
         else
           a(href=redirect)
-            +img-na-rounded-media-object(120, 100)
+            +img-na-rounded-media-object(200, 100)
             
       .media-body
         a(href=redirect)
