--- a/templates/views/elearning/content/courseOutline.jade
+++ b/templates/views/elearning/content/courseOutline.jade
@@ -1,24 +1,24 @@
 extends ../../../layouts/elearning
 
-mixin currentCourse-grid(course)
+mixin currentCourse-grid(outline)
   .row.equal-height    
-    if course.outline.length
-      each item in course.outline
+    if outline.length
+      each item in outline
         .col-xs-6.col-md-3
           +learning-object-card(item, item.url)
     else
       h3.text-muted There are no lessons in this course yet.
 
-mixin currentCourse-list(course)
+mixin currentCourse-list(outline)
   .row
-    if course.outline.length
+    if outline.length
       .col-md-9
         .panel
           table.table.table-hover
             thead
             tbody
-              each item in course.outline
-                +course-tr-media(item, item.url)
+              each item in outline
+                +learning-object-tr-media(item, item.url)
     else
       h3.text-muted There are no lessons in this course yet.
 
@@ -39,13 +39,13 @@ block content
             .col-md-8
               span !{currentCourse.content.extended}
             .col-md-4
-              +img-available.rounded(currentCourse._.thumbnail.limit(400, 350), currentCourse.title, 400, 350)
+              +img-available-rounded(currentCourse._.thumbnail.limit(300, 300), currentCourse.title, 300, 300)
           else
             span !{currentCourse.content.extended}
         hr
         .row
           if viewStyle == 'grid'
-            +currentCourse-grid(currentCourse)
+            +currentCourse-grid(outline)
           else
-            +currentCourse-list(currentCourse)
+            +currentCourse-list(outline)
       
