added eresources to breadcrumbs and changed to uppercase

--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -222,7 +222,7 @@ a:hover, a:focus, a:active {
 
 .elearning-breadcrumb li a {
   color: #FBFBFB;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 .elearning-breadcrumb li a:hover {
