--- a/templates/layouts/elearning.jade
+++ b/templates/layouts/elearning.jade
@@ -71,6 +71,8 @@ html
         ol.breadcrumb.elearning-breadcrumb
           li
             a(href="/") Home
+          li
+            a(href="/eresources") E-Resources
           each breadcrumb in breadcrumbs
             li
               a(href=breadcrumb.link) #{breadcrumb.text}
