--- a/templates/views/elearning/content/courseList.jade
+++ b/templates/views/elearning/content/courseList.jade
@@ -43,5 +43,5 @@ block content
           +allcourses-grid(courses.results)
         else
           +allcourses-list(courses.results)
-        +paginate-generic(courses)
+        +paginate-generic(courses, url)
 
