--- a/templates/views/elearning/content/learningObjectList.jade
+++ b/templates/views/elearning/content/learningObjectList.jade
@@ -50,6 +50,6 @@ block content
           +learningObjects-grid(learningObjects.results)
         if viewStyle == 'list'
           +learningObjects-list(learningObjects.results)
-        +paginate-generic(learningObjects)
+        +paginate-generic(learningObjects, url)
     
 
