--- a/templates/views/elearning/content/popular.jade
+++ b/templates/views/elearning/content/popular.jade
@@ -54,5 +54,5 @@ block content
           +popularLO-grid(paginatePopularLO.results)
         else
           +popularLO-list(paginatePopularLO.results)
-        +paginate-page-view-duration(paginatePopularLO)
+        +paginate-page-view-duration(paginatePopularLO, url)
     
