--- a/public/styles/eresources/publications.less
+++ b/public/styles/eresources/publications.less
@@ -6,7 +6,7 @@
 }
 
 .publication-col-grid .cover {
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   width: 100px;
   height: 180px;
   position: relative;
