--- a/public/styles/community/public-news.less
+++ b/public/styles/community/public-news.less
@@ -31,6 +31,7 @@
         width: 100%;
         top: 0;
         left: 0;
+        padding: 0;
 
         img {
           height: auto;
@@ -41,6 +42,7 @@
   }
 
   .image {
+    padding: 0;
     padding-left: 0px;
     padding-right: 0px;
 
