Added 'No results found' case in publications

--- a/public/styles/eresources/publications.less
+++ b/public/styles/eresources/publications.less
@@ -74,3 +74,10 @@
 .heading-center{
   text-align: center;
 }
+
+.no-results {
+  text-align: center;
+  color: #777;
+  font-size: 19px;
+  /*font-weight:700;*/
+}
