Removed download button

--- a/templates/views/eresources/publication.jade
+++ b/templates/views/eresources/publication.jade
@@ -10,7 +10,7 @@ block content
             img(src=publication._.cover.fit(200, 360, {}))
             br
             br
-            a.btn.btn-success(href=publication.file.url,role="button",download) Download
+            //- a.btn.btn-success(href=publication.file.url,role="button",download) Download
           .col-md-9
             h2
               | #{publication.title}
