--- a/public/styles/community/community.less
+++ b/public/styles/community/community.less
@@ -1,3 +1,6 @@
+@navbar-text:  #FBFBFB;
+@navbar-text-hover: #808080;
+
 .community-body {
   /*margin-top: 85px;*/
   /*130 to accomodate main header (logo + links) and blue community header*/
@@ -8,12 +11,25 @@
   background-color: #F1F1F1;
 }
 
+
 #community-nav {
   margin-top: 85px;
-  height: 45px;
+  height: 50px;
   background-color:#3062B7;
-
 }
+
+#community-nav ul.nav {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+
+.community-nav-item {
+  background-color: #3062B7;
+}
+
+
+
 
 .community-breadcrumb {
   background-color: unset;
@@ -22,33 +38,26 @@
 }
 
 .community-breadcrumb li a {
-  color: #FBFBFB;
+  color: @navbar-text;
   text-transform: uppercase;
 }
 
 .community-breadcrumb li a:hover {
-  color: #c3d8f7;
+  color: @navbar-text-hover;
 }
 
 .community-breadcrumb li:last-child {
-  color: #FBFBFB;
+  color: @navbar-text;
   text-transform: uppercase;
 }
 
-#user-login-links {
-  float: right;
-  padding: 10px 15px 9px 15px;
-  color: #FBFBFB;
+#login-controls > li > a{
+  color: @navbar-text;
 }
 
-.login-link {
-  color: #FBFBFB;
+#login-controls li a:hover {
+  color: @navbar-text-hover;
 }
-
-.login-link:hover {
-  color: #c3d8f7;
-}
-
 
 .container.margin-top {
   margin-top: 20px;
