--- a/templates/views/community/community.jade
+++ b/templates/views/community/community.jade
@@ -9,5 +9,6 @@ block content
 block js
   script(src='/bower_components/theia-sticky-sidebar/dist/ResizeSensor.js')
   script(src='/bower_components/theia-sticky-sidebar/dist/theia-sticky-sidebar.js')
+  script(src='/bower_components/masonry/dist/masonry.pkgd.min.js')
   script(src='/js/dropdown.js')
   script(src='/js/community-public.js')
