--- a/public/styles/community/public-features.less
+++ b/public/styles/community/public-features.less
@@ -3,6 +3,7 @@
 
 #public-features {
   padding: 0px 90.5px;
+  padding-top: 15px;
 
   /* Carousel base class */
   .carousel {
@@ -24,7 +25,7 @@
 
   .news-item {
     margin: 0;
-    top: 15px;
+    top: 35px;
     left: 20px;
     right: auto;
     bottom: auto;
