--- a/public/styles/community/public-news.less
+++ b/public/styles/community/public-news.less
@@ -57,12 +57,13 @@
     }
   }
 
+
   .img-description {
     background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.85) 100%);
     background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.85) 100%);
     background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.85) 100%);
     position: absolute;
-    padding: 50px 20px 20px 20px;
+    padding: 50px 20px 50px 20px;
     width: 100%;
     bottom: 0;
     left: 0;
@@ -79,6 +80,10 @@
     .title {
       font-size: 30px;
       color: white;
+    }
+
+    .text {
+      bottom: 30px;
     }
   }
 
