Add logos in footer

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -172,6 +172,17 @@ html
 							b  ABOUT DPITC
 						p.white-text
 						| A One-Stop-Shop 'Convergence Hub' for inventors and technology users in the agriculture, aquatic, and natural resources sectors in the Philippines within every Juan's reach.
+
+						br 
+						
+						a(href='http://www.dost.gov.ph/', title='DOST')
+							img.logos-class(src='images/dost.png')
+						a(href='http://www.pcaarrd.dost.gov.ph/home/portal/', title='PCAARRD')
+							img.logos-class(src='images/pcaarrd.png')
+						a(href='http://www.uplb.edu.ph/', title='UPLB')
+							img.logos-class(src='images/uplb.png')
+
+
 		.footer-copyright
 			.container
 				| © Copyright 2017. DOST-PCAARRD. All rights reserved.
